--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ crash.*.log
 # *.tfvars
 *.tfvars.json
 
+plan.json
+
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
