--- a/ansible/books/terraform-dependencies.yaml
+++ b/ansible/books/terraform-dependencies.yaml
@@ -5,6 +5,4 @@
   become_method: sudo
   tasks:
     - name: Install Terraform dependencies
-      command:  bash ./script/dependencies.sh
-
-  
+      command:  bash ../scripts/dependencies.sh
