--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     - repo: https://github.com/antonbabenko/pre-commit-terraform
       rev: v1.64.1
       hooks:
+          - id: terraform_tfsec
           - id: terraform_fmt
           - id: terraform_validate
             exclude: |
