--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,26 +14,26 @@ repos:
     #       - id: terraform_validate
     #       - id: terraform_docs_replace
 
-    - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v4.4.0
-      hooks:
-        - id: trailing-whitespace
-        - id: end-of-file-fixer
-        - id: check-yaml
-        - id: check-added-large-files
-    - repo: https://github.com/dnephin/pre-commit-golang
-      rev: v0.5.1
-      hooks:
-        - id: go-fmt
+    # - repo: https://github.com/pre-commit/pre-commit-hooks
+    #   rev: v4.4.0
+    #   hooks:
+    #     - id: trailing-whitespace
+    #     - id: end-of-file-fixer
+    #     - id: check-yaml
+    #     - id: check-added-large-files
+    # - repo: https://github.com/dnephin/pre-commit-golang
+    #   rev: v0.5.1
+    #   hooks:
+    #     - id: go-fmt
         # - id: go-imports
         # - id: golangci-lint
         # - id: no-go-testing
         # - id: go-unit-tests
-    # - repo: https://github.com/igorshubovych/markdownlint-cli
-    #   rev: v0.33.0
-    #   hooks:
-    #     - id: markdownlint
-    # - repo: https://github.com/detailyang/pre-commit-shell
-    #   rev: 1.0.5
-    #   hooks:
-    #     - id: shell-lint
+    - repo: https://github.com/igorshubovych/markdownlint-cli
+      rev: v0.33.0
+      hooks:
+        - id: markdownlint
+    - repo: https://github.com/detailyang/pre-commit-shell
+      rev: 1.0.5
+      hooks:
+        - id: shell-lint
